--- a/src/view/form.html
+++ b/src/view/form.html
@@ -1,6 +1,10 @@
-{extend name='admin@public/content'}
+<style>
+    .think-box-shadow {
+        background: #fff;
+        box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+    }
+</style>
 {block name="content"}
-
 <form class="layui-form layui-box think-box-shadow" action="{$aciontUrl}" data-auto="true" method="post" autocomplete="off">
     <div class="layui-card-body">
         {$content|raw}
@@ -12,9 +16,11 @@
     </div>
     </form>
 {/block}
-{block name='script'}
+
+<script type="text/javascript">
+    {$import_js|raw}
+</script>
 <script>
     {$script|raw}
     window.form.render();
 </script>
-{/block}
