--- a/src/view/grid.html
+++ b/src/view/grid.html
@@ -66,10 +66,10 @@
 <!--{/notempty}-->
 <!--{/block}-->
 {block name='content'}
-<div class="layui-card-body layui-anim layui-anim-upbit ">
-    <div class="layui-card-body layui-card">
+<div class="layui-card-body layui-anim layui-anim-upbit">
+    <div class="layui-card-body layui-card think-box-shadow">
         <div class="layui-card-body">
-            <div class="think-box-shadow">
+            <div class="">
                 {$filter|raw}
                 {$table|raw}
             </div>
