调整导出微信表情影响问题，表格排序禁用layui前端排序，统计echart时间bug问题，from保存回调前bug

--- a/src/view/table.html
+++ b/src/view/table.html
@@ -41,6 +41,7 @@
         table.render({
             elem: '#{$tableId}'
             ,url:'{:url(request()->url())}'
+            ,autoSort:false
             ,where:{
                 table:true
             }
