--- a/src/view/form.html
+++ b/src/view/form.html
@@ -15,7 +15,7 @@
 <!--{/block}-->
 {block name="content"}
 <div class="layui-card-body layui-anim layui-anim-upbit">
-    <form class="layui-form layui-card-body think-box-shadow" action="{$aciontUrl}" data-auto="true" method="post" autocomplete="off">
+    <form class="layui-form layui-card-body think-box-shadow" action="{$aciontUrl}" method="post" autocomplete="off">
         <div class="layui-card-body">
             {$content|raw}
             <div class="hr-line-dashed"></div>
