--- a/src/view/checkbox.html
+++ b/src/view/checkbox.html
@@ -2,7 +2,7 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-{$layui}">
         {foreach $options as $key=>$val}
-        <input type="checkbox" style="display:none!important;" {$required}name="{$name}[]" title="{$val}" {eq name="$key" value="$value"}checked{/eq} value="{$key}"/>
+        <input type="checkbox" style="display:none!important;" {$required}name="{$name}[]" title="{$val}" {if in_array($key,$value)}checked{/if} value="{$key}"/>
         {/foreach}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
