from新增select多对多，gitd关联删除多对多中间表

--- a/src/view/select.html
+++ b/src/view/select.html
@@ -15,7 +15,7 @@
 <script type="text/javascript">
     var formSelects = layui.formSelects;
     formSelects.render('{$name}',{
-        init:[{$value}],
+        init:{$value|raw|json_encode},
     });
 </script>
 {/if}
