--- a/src/view/select.html
+++ b/src/view/select.html
@@ -1,21 +1,36 @@
 <div class="layui-form-item">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
-        <select name="{$name}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
-            {foreach $options as $key=>$val}
+        <select name="{$name}" lay-filter="{$name}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
+            <!--{foreach $options as $key=>$val}-->
             <option value="{$key}" {eq name="$value" value="$key"}selected{/eq}>{$val}</option>
-            {/foreach}
+            <!--{/foreach}-->
         </select>
-        {notempty name="$help"}
+        <!--{notempty name="$help"}-->
         <div class="help-block">{$help}</div>
-        {/notempty}
+        <!--{/notempty}-->
     </div>
 </div>
-{if isset($multiple)}
+<!--{if isset($load)}-->
+<script type="text/javascript">
+form.on('select({$name})', function(data){
+    $.post("{:url($load[1])}",{q:data.value},function(result,status){
+        var data = result.data;
+        var str = '';
+        for(var x in data){
+            str += '<option value = "' + data[x].id + '">' + data[x].text + '</option>'
+        }
+        $('select[name={$load[0]}]').html(str);
+        form.render('select'); 
+    });
+});
+</script>
+<!--{/if}-->
+<!--{if isset($multiple)}-->
 <script type="text/javascript">
     var formSelects = layui.formSelects;
     formSelects.render('{$name}',{
         init:{$value|raw|json_encode},
     });
 </script>
-{/if}
+<!--{/if}-->
