--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -5,7 +5,7 @@
     <span class="layui-icon layui-icon-next font-s10 color-desc margin-right-5"></span>{$title|default=''}
     <!--{if $Think.get.back eq 1}-->
     <button style="position:absolute;right:5px;top: 5px" class="layui-btn layui-btn-sm layui-bg-black"
-            href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>返回
+            href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>{:lang('build_view_back_btn')}
     </button>
     </span>
     <!--{/if}-->
