--- a/src/view/form.html
+++ b/src/view/form.html
@@ -5,7 +5,7 @@
     <span class="layui-icon layui-icon-next font-s10 color-desc margin-right-5"></span>{$title|default=''}
     <!--{if $Think.get.back eq 1}-->
     <button style="position:absolute;right:5px;top: 5px" class="layui-btn layui-btn-sm layui-bg-black"
-            href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>返回
+            href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>{:lang('build_view_back_btn')}
     </button>
     </span>
     <!--{/if}-->
@@ -29,7 +29,7 @@
             <div class="hr-line-dashed"></div>
             <div class="layui-form-item text-center">
                 {$hiddenId|raw}
-                <button class="layui-btn" lay-submit type='submit' lay-filter="*">保存数据</button>
+                <button class="layui-btn" lay-submit type='submit' lay-filter="*">{:lang('build_view_form_save')}</button>
             </div>
         </div>
     </form>
