--- a/src/view/hasMany.html
+++ b/src/view/hasMany.html
@@ -4,7 +4,7 @@
         <div class="layui-row" id="hasMany{$name}">
             {$value|raw}
         </div>
-        <div class="layui-input-block"><button type="button" class="layui-btn layui-btn-normal" data-hasMany="hasManyAdd">添加</button></div>
+        <div class="layui-input-block"><button type="button" class="layui-btn layui-btn-normal" data-hasMany="hasManyAdd">{:lang('build_view_add_btn')}</button></div>
     </div>
 </fieldset>
 <script>
