--- a/src/view/hidden.html
+++ b/src/view/hidden.html
@@ -1,1 +1,1 @@
-<input type="hidden" {$required}name="{$name}" value="{$value}"  placeholder="请输入{$label}" class="layui-input">
+<input type="hidden" {$required}name="{$name}" value="{$value}"  placeholder="{:lang('build_view_please_input')}{$label}" class="layui-input">
