--- a/src/view/date.html
+++ b/src/view/date.html
@@ -2,7 +2,7 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {if isset($required)}<input type="hidden" required>{/if}
-        <input  lay-verify="{$layVerify}"  readonly lay-verType="tips" lay-reqText="请选择{$label}" name="{$name}" id="{$name}" value="{$value}"  placeholder="请选择{$label}" class="layui-input">
+        <input  lay-verify="{$layVerify}"  readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" name="{$name}" id="{$name}" value="{$value}"  placeholder="{:lang('build_view_please_select')}{$label}" class="layui-input">
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
