--- a/src/view/dateRange.html
+++ b/src/view/dateRange.html
@@ -4,14 +4,14 @@
         {if isset($required)}<input type="hidden" required>{/if}
         {if is_array($name)}
         <div class="layui-inline">
-            <input   lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="请选择开始{$label}" name="{$name[0]}" id="{$name[0]}" value="{$value[0]|default=''}"  placeholder="请选择开始{$label}" class="layui-input">
+            <input   lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_start')}{$label}" name="{$name[0]}" id="{$name[0]}" value="{$value[0]|default=''}"  placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_start')}{$label}" class="layui-input">
         </div>
         <div class="layui-inline">-</div>
         <div class="layui-inline">
-            <input   lay-verify="{$layVerify}" readonly  lay-verType="tips" lay-reqText="请选择结束{$label}" name="{$name[1]}" id="{$name[1]}" value="{$value[1]|default=''}"  placeholder="请选择结束{$label}" class="layui-input">
+            <input   lay-verify="{$layVerify}" readonly  lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_end')}{$label}" name="{$name[1]}" id="{$name[1]}" value="{$value[1]|default=''}"  placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_end')}{$label}" class="layui-input">
         </div>
         {else/}
-        <input  lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="请选择{$label}" name="{$name}" id="{$name}" value="{$value}"  placeholder="请选择{$label}" class="layui-input">
+        <input  lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" name="{$name}" id="{$name}" value="{$value}"  placeholder="{:lang('build_view_please_select')}{$label}" class="layui-input">
         {/if}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
