--- a/src/view/filter.html
+++ b/src/view/filter.html
@@ -21,12 +21,12 @@
     }
 </style>
 <fieldset class="layui-elem-field" >
-    <legend style="margin-bottom:0px">条件搜索</legend>
+    <legend style="margin-bottom:0px">{:lang('build_view_filter_search_desc')}</legend>
     <div class="layui-field-box">
     <form class="layui-form layui-form-pane form-search" action="{:request()->url()}" onsubmit="return filterSubmit()" method="get" autocomplete="off">
         {$filter|raw}
         <div class="layui-form-item layui-inline">
-            <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> 搜 索</button>
+            <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> {:lang('build_view_filter_search')}</button>
         </div>
     </form>
     </div>
