--- a/src/view/iframe.html
+++ b/src/view/iframe.html
@@ -7,24 +7,24 @@
     <span class="layui-icon layui-icon-next font-s10 color-desc margin-right-5"></span>{$title|default=''}
     <!--{if $Think.get.back eq 1}-->
     <button style="position:absolute;right:5px;top: 5px" class="layui-btn layui-btn-sm layui-bg-black"
-            href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>返回
+            href="javascript:;" onclick="history.back();"><i class="layui-icon">&#xe65a;</i>{:lang('build_view_back_btn')}
     </button>
     </span>
     <!--{/if}-->
     <div class="pull-right">
         <!--{if !isset($hideAddButton)}-->
-        <button data-{$formOpen|default="open" }='{:url("form")}?back=1' type="button" data-title="添加"
-                class='layui-btn layui-btn-sm layui-btn-primary'><i class="layui-icon layui-icon-add-1"></i>添加
+        <button data-{$formOpen|default="open" }='{:url("form")}?back=1' type="button" data-title="{:lang('build_view_add_btn')}"
+                class='layui-btn layui-btn-sm layui-btn-primary'><i class="layui-icon layui-icon-add-1"></i>{:lang('build_view_add_btn')}
         </button>
         <!--{/if}-->
         <!--{if !isset($hideDeletesButton)}-->
         <span class="layui-nav layui-bg-red layui-btn layui-btn-sm layui-inline" style="z-index:1">
              <li class="layui-nav-item ">
                  <a href="javascript:;" class='layui-btn layui-btn-sm layui-btn-danger' style="color: #ffffff"><i
-                         class="layui-icon layui-icon-delete"></i>批量删除</a>
+                         class="layui-icon layui-icon-delete"></i>{:lang('build_view_batch_del_btn')}</a>
             <dl class="layui-nav-child">
-                <dd lay-unselect><a id="batch_delete">删除选中</a></dd>
-                <dd lay-unselect><a id="batch_delete_all">清空</a></dd>
+               <dd lay-unselect><a id="batch_delete">{:lang('build_view_del_select_btn')}</a></dd>
+                <dd lay-unselect><a id="batch_delete_all">{:lang('build_view_del_all_btn')}</a></dd>
 
             </dl>
              </li>
@@ -45,11 +45,11 @@
         <span class="layui-nav layui-bg-blue layui-btn layui-btn-sm layui-inline" style="z-index:1">
              <li class="layui-nav-item ">
                  <a href="javascript:;" class='layui-btn layui-btn-sm layui-btn-normal' style="color: #ffffff"><i
-                         class="layui-icon layui-icon-export"></i>导 出</a>
+                         class="layui-icon layui-icon-export"></i>{:lang('build_view_export_btn')}</a>
             <dl class="layui-nav-child">
-                   <dd lay-unselect><a data-href='{:request()->url()}&export=true&export_type=all'>导出当前页</a></dd>
-                <dd lay-unselect><a id="excelPage">导出当前页</a></dd>
-                <dd lay-unselect><a id="excelSelect">导出选中行</a></dd>
+                 <dd lay-unselect><a data-href='{:request()->url()}&export=true&export_type=all'>{:lang('build_view_export_all_btn')}</a></dd>
+                <dd lay-unselect><a id="excelPage">{:lang('build_view_export_current_btn')}</a></dd>
+                <dd lay-unselect><a id="excelSelect">{:lang('build_view_export_select_btn')}</a></dd>
 
             </dl>
              </li>
