--- a/src/view/image.html
+++ b/src/view/image.html
@@ -2,7 +2,7 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {if isset($required)}<input type="hidden" required>{/if}
-        <input type="hidden" name="{$name}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="请选择{$label}" value="{$value}" data-width="{$width|default=''}" data-height="{$height|default=''}">
+        <input type="hidden" name="{$name}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" value="{$value}" data-width="{$width|default=''}" data-height="{$height|default=''}">
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
