--- a/src/view/radio.html
+++ b/src/view/radio.html
@@ -2,7 +2,7 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {foreach $options as $key=>$val}
-        <input type="radio" style="display:none!important;" {$required}name="{$name}" title="{$val}" {eq name="$key" value="$value"}checked{/eq} value="{$key}"/>
+        <input type="radio" style="display:none!important;" {$required} name="{$name}" lay-filter="{$name}" title="{$val}" {eq name="$key" value="$value"}checked{/eq} value="{$key}"/>
         {/foreach}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
