--- a/src/view/switchUpdate.html
+++ b/src/view/switchUpdate.html
@@ -1,5 +1,5 @@
 <div class="layui-form layui-box">
-<input type="checkbox" style="display:none!important;" lay-filter="switch-{$domId}" {$required}name="switch-{$domId}" {eq name="$value" value="$swithcStates['on']['value']|default='1'"}checked{/eq} lay-text="{$swithcStates['on']['text']|default='打开'}|{$swithcStates['off']['text']|default='关闭'}" lay-skin="switch">
+<input type="checkbox" style="display:none!important;" lay-filter="switch-{$domId}" {$required}name="switch-{$domId}" {eq name="$value" value="$swithcStates['on']['value']|default='1'"}checked{/eq} lay-text="{$swithcStates['on']['text']|default=lang('build_view_grid_switch_on')}|{$swithcStates['off']['text']|default=lang('build_view_grid_switch_off')}" lay-skin="switch">
 <input name="{$domId}" type="hidden" value="{$value}">
 </div>
 <script>
@@ -7,14 +7,14 @@
      {eq name="$value" value="$swithcStates['on']['value']|default='1'"}
         $('input[name={$name}]').val('{$value}');
      {else/}
-         $('input[name={$name}]').val("{$swithcStates['off']['value']|default='0'}");
+         $('input[name={$name}]').val("{$swithcStates['off']['value']|default='-1'}");
          {/eq}
     form.on('switch(switch-{$domId})', function(data){
         var value ='';
         if(data.elem.checked){
             value = "{$swithcStates['on']['value']|default='1'}";
         }else{
-            value = "{$swithcStates['off']['value']|default='0'}";
+            value = "{$swithcStates['off']['value']|default='-1'}";
         }
         $('input[name={$domId}]').val(value);
         $.post('{:url(request()->url())}',{id:'{$id}',field:'{$name}',value:$('input[name={$domId}]').val()},function(res){
